--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -16,7 +16,11 @@ jobs:
           toolchain: beta
           default: true
           override: true
-
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update \
+          && sudo apt-get install -y \
+          libdbus-1-dev
       - name: Build
         run: cargo build --all --release && strip target/release/rust-aha-cli && mv target/release/rust-aha-cli target/release/aha-cli-amd64
 
