--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+debug_stub_derive = "0.3.0"
 scarlet = "*"
 tui = "0.9"
 termion = "1.5"
